# trihexor

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: trihexor.cpp  trihexor2.cpp
